services/elasticsearch/k8s/kibana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
    name: kibana
  selector:
    app: kibana
